--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -16,4 +16,10 @@ functions:
       - http:
           path: api/get-auth-url
           method: get
+  getAccessToken:
+    handler: handler.getAccessToken
+    events:
+      - http:
+          path: api/token/{code}
+          method: get
 
