Minor update .gitignore and serverless.yml

--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -16,10 +16,12 @@ functions:
       - http:
           path: api/get-auth-url
           method: get
+          cors: true
   getAccessToken:
     handler: handler.getAccessToken
     events:
       - http:
           path: api/token/{code}
           method: get
+          cors: true
 
