--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -24,4 +24,10 @@ functions:
           path: api/token/{code}
           method: get
           cors: true
-
+  getCalendarEvents:
+    handler: handler.getCalendarEvents
+    events:
+      - http:
+          path: api/get-events/{access_token}
+          method: get
+          cors: true
