--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
+    "jest-cucumber": "^4.5.0",
     "jest-environment-jsdom": "^30.2.0",
+    "puppeteer": "^24.25.0",
     "vite": "^5.3.1"
   }
 }
