--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "jest --watch"
   },
   "dependencies": {
+    "atatus-spa": "^4.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
